--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="assets/img/profile-img.jpg" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
-    <link
+    <!--    <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Abel&family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-
+-->
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link
@@ -173,9 +173,11 @@
             <h3 class="main_section_title">Informationen</h3>
             <p>
               <b>
-                Der Laden ist in den Pfingstferien geschlossen. Erster
-                Öffnungstag <br />
-                nach den Ferien am Dienstag, 13.06.2023</b
+                In den Sommerferien ist der Laden geschlossen.<br />
+                Letzter Öffnungstag VOR den Ferien am Samstag, 29.07.2023
+
+                <br />
+                Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023</b
               >
             </p>
           </div>
@@ -211,8 +213,9 @@
 
             <p>
               <a href="./was.html"
-                >Unterstützung Erdbebenopfer Türkei / Syrien</a
-              >
+                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                Stadtbus-Jahreskarten an sozial Berechtigte
+              </a>
             </p>
           </div>
           <!-- contact -->
@@ -277,14 +280,7 @@
       </section>
     </main>
     <!-- End #main -->
-    <div>
-      <div class="copyright">
-        <a href="https://nalad.com.ua" target="_blank">
-          &copy; Copyright by
-          <strong><span>Natoilad</span> 2023</strong></a
-        >
-      </div>
-    </div>
+
     <!-- btn_up -->
     <a
       href="#"
@@ -298,9 +294,11 @@
         <h3 class="main_section_title">Informationen</h3>
         <p>
           <b>
-            Der Laden ist in den Pfingstferien geschlossen. Erster Öffnungstag
+            In den Sommerferien ist der Laden geschlossen.<br />
+            Letzter Öffnungstag VOR den Ferien am Samstag, 29.07.2023
+
             <br />
-            nach den Ferien am Dienstag, 13.06.2023</b
+            Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023</b
           >
         </p>
       </div>
