--- a/spendenkonto.html
+++ b/spendenkonto.html
@@ -178,7 +178,8 @@
 
             <p>
               <a href="./was.html"
-                >Unterstützung Erdbebenopfer Türkei / Syrien</a
+                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                Stadtbus-Jahreskarten an sozial Berechtigte</a
               >
             </p>
           </div>
@@ -245,14 +246,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <div>
-      <div class="copyright">
-        <a href="https://nalad.com.ua" target="_blank">
-          &copy; Copyright by
-          <strong><span>Natoilad</span> 2023</strong></a
-        >
-      </div>
-    </div>
+
     <!-- End  Footer -->
 
     <a
