--- a/was.html
+++ b/was.html
@@ -170,6 +170,70 @@
                 <span class="dot" onclick="currentSlide(7)"></span>
                 <span class="dot" onclick="currentSlide(8)"></span>
                 <span class="dot" onclick="currentSlide(9)"></span>
+                <span class="dot" onclick="currentSlide(10)"></span>
+              </div>
+              <div class="slide">
+                <div class="arow_container" style="width: 100%">
+                  <a class="left" onclick="changeSlide(-1)">&#10094;</a>
+                  <a class="right" onclick="changeSlide(1)">&#10095;</a>
+                </div>
+                <img
+                  src="./assets/img/portfolio/portfolio-10.jpg"
+                  alt="Image 0"
+                />
+                <div style="padding: 20px">
+                  <h4>
+                    Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                    Stadtbus-Jahreskarten an sozial Berechtigte
+                  </h4>
+                  <p>
+                    Kurz vor den Sommerferien in Bayern hat die
+                    Nachbarschaftshilfe Lindau (B) e.V. die ersten
+                    Stadtbus-Jahreskarten an Familien mit Kindern übergeben.
+                    Nach Eingang und sozialer Prüfung der Anträge konnten sich
+                    zunächst drei Familien über die Zuwendung freuen. Der
+                    Vorstand hat in diesem Jahr für die Aktion ein Budget von
+                    ca. 10.000 € beschlossen, was für 20 Jahreskarten reicht.
+                    Jede Stadtbuskarte hat einen Einzelwert von 492 Euro und ist
+                    innerhalb der Familie übertragbar. Am Wochenende, wie auch
+                    am 15.08., 24.12. und 31.12. können bis zu fünf eigene
+                    Kinder mitgenommen werden. Die jetzt ausgegeben Karten sind
+                    von August 2023 bis Ende Juli 2024 gültig und verlängern
+                    sich nicht automatisch. Die frohe Botschaft einer
+                    Beteiligung der Stadtwerke kam von Geschäftsführer Hannes
+                    Rösch und Marketingleiter Günter Baumann. Norbert Kolz,
+                    stellvertretender Vorsitzender der Nachbarschaftshilfe
+                    freute sich über die Unterstützung der sozialen Aktion in
+                    Höhe von 800 Euro. Auch NBH-Vorsitzende Sybille Mang meldete
+                    sich aus dem Urlaub und betonte, dass gerade in Zeiten der
+                    Klimakrise die Nachbarschaftshilfe Lindau einen Beitrag
+                    leisten könne. Gerade Familien mit Kindern und einem kleinen
+                    Budget seien oft auf öffentliche Verkehrsmittel angewiesen.
+                    Die Nachbarschaftshilfe Lindau leiste hier einen
+                    gesellschaftlichen, wie auch für die Umwelt wertvollen
+                    Beitrag. Die Aktion geht weiter und so können auch während
+                    der Sommerpause digital per E-Mail-Anträge gestellt werden
+                    (info@nachbarschaftshilfe-lindau.de). Erforderlich dabei
+                    sind vollständige Kontaktdaten (Name, Anschrift,
+                    Telefonnummer, E-Mail) und entsprechende Nachweise über den
+                    Empfang von Sozialleistungen (Bürgergeld, Arbeitslosengeld,
+                    Wohngeld, Sozialhilfe, Kinderzuschlag, Bildung und Teilhabe,
+                    Mehrbedarfszuschläge für Schwangere, Alleinerziehende oder
+                    Menschen mit Behinderung). Der Laden der Nachbarschaftshilfe
+                    ist bis zum 11. September geschlossen. Ab Dienstag, 12.
+                    September stehen Beate Schwammel und Team wieder im Laden zu
+                    den wöchentlichen Öffnungszeiten (Dienstag 09-14 Uhr und
+                    Samstag 09-12 Uhr) zur Verfügung. Dann können die Anträge
+                    und Unterlagen auch persönlich abgegeben werden. Für
+                    telefonische Erreichbarkeit ab 12. September steht die
+                    Rufnummer „01525/6965039“ zur Verfügung. Auf dem Foto sind
+                    Ladenleiterin Beate Schwammel und Vorstandsmitglied Petra
+                    Venuti bei der Übergabe der Karten, zu sehen. <br /><br />
+                    Bildquelle: Norbert Kolz <br />
+                    <br />
+                    Foto, von links: Petra Venuti und Beate Schwammel
+                  </p>
+                </div>
               </div>
               <div class="slide">
                 <div class="arow_container" style="width: 100%">
@@ -181,7 +245,10 @@
                   alt="Image 1"
                 />
                 <div style="padding: 20px">
-                  <h4>Unterstützung Erdbebenopfer Türkei / Syrien</h4>
+                  <h4>
+                    Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                    Stadtbus-Jahreskarten an sozial Berechtigte
+                  </h4>
                   <p>
                     Die Nachbarschaftshilfe Lindau unterstützt die Erdbebenopfer
                     in der Türkei und Syrien. In Zusammenarbeit mit der Kanzlei
@@ -238,7 +305,10 @@
                   alt="Image 2"
                 />
                 <div style="padding: 20px">
-                  <h4>Unterstützung Erdbebenopfer Türkei / Syrien</h4>
+                  <h4>
+                    Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                    Stadtbus-Jahreskarten an sozial Berechtigte
+                  </h4>
                   <p>
                     <b
                       ><u
@@ -745,7 +815,8 @@
 
             <p>
               <a href="./was.html"
-                >Unterstützung Erdbebenopfer Türkei / Syrien</a
+                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                Stadtbus-Jahreskarten an sozial Berechtigte</a
               >
             </p>
           </div>
@@ -813,14 +884,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <div>
-      <div class="copyright">
-        <a href="https://nalad.com.ua" target="_blank">
-          &copy; Copyright by
-          <strong><span>Natoilad</span> 2023</strong></a
-        >
-      </div>
-    </div>
+
     <!-- End  Footer -->
     <a
       href="#"
