--- a/mitglied.html
+++ b/mitglied.html
@@ -177,8 +177,9 @@
 
             <p>
               <a href="./was.html"
-                >Unterstützung Erdbebenopfer Türkei / Syrien</a
-              >
+                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                Stadtbus-Jahreskarten an sozial Berechtigte
+              </a>
             </p>
           </div>
           <div class="univrsal_container">
@@ -244,14 +245,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <div>
-      <div class="copyright">
-        <a href="https://nalad.com.ua" target="_blank">
-          &copy; Copyright by
-          <strong><span>Natoilad</span> 2023</strong></a
-        >
-      </div>
-    </div>
+
     <!-- End  Footer -->
 
     <a
