--- a/satzung.html
+++ b/satzung.html
@@ -1694,7 +1694,8 @@
 
             <p>
               <a href="./was.html"
-                >Unterstützung Erdbebenopfer Türkei / Syrien</a
+                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                Stadtbus-Jahreskarten an sozial Berechtigte</a
               >
             </p>
           </div>
@@ -1761,14 +1762,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <div>
-      <div class="copyright">
-        <a href="https://nalad.com.ua" target="_blank">
-          &copy; Copyright by
-          <strong><span>Natoilad</span> 2023</strong></a
-        >
-      </div>
-    </div>
+
     <!-- End  Footer -->
 
     <a
