--- a/wo.html
+++ b/wo.html
@@ -187,7 +187,8 @@
             <h2 class="main_section_title">News</h2>
             <p>
               <a href="./was.html"
-                >Unterstützung Erdbebenopfer Türkei / Syrien</a
+                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
+                Stadtbus-Jahreskarten an sozial Berechtigte</a
               >
             </p>
           </div>
@@ -254,14 +255,7 @@
     <!-- End #main -->
 
     <!-- ======= Footer ======= -->
-    <div>
-      <div class="copyright">
-        <a href="https://nalad.com.ua" target="_blank">
-          &copy; Copyright by
-          <strong><span>Natoilad</span> 2023</strong></a
-        >
-      </div>
-    </div>
+
     <!-- End  Footer -->
 
     <a
