--- a/was.html
+++ b/was.html
@@ -245,10 +245,7 @@
                   alt="Image 1"
                 />
                 <div style="padding: 20px">
-                  <h4>
-                    Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                    Stadtbus-Jahreskarten an sozial Berechtigte
-                  </h4>
+                  <h4>Unterstützung Erdbebenopfer Türkei / Syrien</h4>
                   <p>
                     Die Nachbarschaftshilfe Lindau unterstützt die Erdbebenopfer
                     in der Türkei und Syrien. In Zusammenarbeit mit der Kanzlei
@@ -305,10 +302,7 @@
                   alt="Image 2"
                 />
                 <div style="padding: 20px">
-                  <h4>
-                    Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                    Stadtbus-Jahreskarten an sozial Berechtigte
-                  </h4>
+                  <h4>Unterstützung Erdbebenopfer Türkei / Syrien</h4>
                   <p>
                     <b
                       ><u
