--- a/index.html
+++ b/index.html
@@ -293,13 +293,21 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
         <p>
-          <b>
-            In den Sommerferien ist der Laden geschlossen.<br />
-            Letzter Öffnungstag VOR den Ferien am Samstag, 29.07.2023
-
-            <br />
-            Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023</b
+          Sommer adé, Willkommen Herbst. So lautet auch das Motto der
+          Nachbarschaftshilfe in diesen Tagen. Wir wechseln das
+          Kleidungsangebot. Die Sommerware kommt weg und Herbst- und
+          Winterbekleidung werden hervorgeholt. Bevor wir aber die Sommerware
+          ganz aus dem Sortiment nehmen, haben Sie noch einmal Gelegenheit
+          Sommerware <b>zum halben Preis</b> zu erwerben. <br />
+          <br />
+          Diese Aktion läuft am
+          <b
+            ><span style="border-bottom: 2px solid #000"
+              >Samstag, 23. September 2023 von 09:00 bis 12:00 Uhr</span
+            ></b
           >
+          im Laden der Nachbarschaftshilfe Lindau in der Kemptener Straße 10. Es
+          lohnt sich <b>50 % auf das komplette Sommerangebot.</b>
         </p>
       </div>
     </div>
