--- a/index.html
+++ b/index.html
@@ -293,21 +293,7 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
         <p>
-          Sommer adé, Willkommen Herbst. So lautet auch das Motto der
-          Nachbarschaftshilfe in diesen Tagen. Wir wechseln das
-          Kleidungsangebot. Die Sommerware kommt weg und Herbst- und
-          Winterbekleidung werden hervorgeholt. Bevor wir aber die Sommerware
-          ganz aus dem Sortiment nehmen, haben Sie noch einmal Gelegenheit
-          Sommerware <b>zum halben Preis</b> zu erwerben. <br />
-          <br />
-          Diese Aktion läuft am
-          <b
-            ><span style="border-bottom: 2px solid #000"
-              >Samstag, 23. September 2023 von 09:00 bis 12:00 Uhr</span
-            ></b
-          >
-          im Laden der Nachbarschaftshilfe Lindau in der Kemptener Straße 10. Es
-          lohnt sich <b>50 % auf das komplette Sommerangebot.</b>
+          Neue Herbst - und Winterware (bester Zustand ) im Angebot der Nachbarschaftshilfe . Egal ob groß oder klein . Der Laden der Nachbarschaftshilfe gibt alles her , Kleidung , Haushaltswaren (Töpfe , Tassen , Teller etc . ) , Elektrogeräte und vieles mehr . Alles in einem Topzustand . Крім того , worauf warten Sie . Wir sind für Sie da : Dienstag 09 -14 Uhr und Samstag 09 -12 Uhr . Bei Fragen einfach folgende Nummer wählen : 0152 569 650 39
         </p>
       </div>
     </div>
