--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       rel="stylesheet"
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="./assets/vendor/font-awesome/css/font-awesome.min.css"
+    />
     <!-- Template Main CSS File -->
     <link href="./css/style.css" rel="stylesheet" />
 
@@ -292,9 +296,44 @@
       <div class="modal-content">
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
-        <p>
-          Neue Herbst - und Winterware (bester Zustand ) im Angebot der Nachbarschaftshilfe . Egal ob groß oder klein . Der Laden der Nachbarschaftshilfe gibt alles her , Kleidung , Haushaltswaren (Töpfe , Tassen , Teller etc . ) , Elektrogeräte und vieles mehr . Alles in einem Topzustand . Крім того , worauf warten Sie . Wir sind für Sie da : Dienstag 09 -14 Uhr und Samstag 09 -12 Uhr . Bei Fragen einfach folgende Nummer wählen : 0152 569 650 39
-        </p>
+        <div>
+          <h2 style="color: #e74c3c">
+            Nikolausaktion der Nachbarschaftshilfe Lindau
+          </h2>
+          <p>
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <strong>Datum:</strong> Samstag, 09. Dezember 2023
+          </p>
+          <p>
+            <i class="fa fa-clock-o" aria-hidden="true"></i>
+            <strong>Zeit:</strong> 09:00 - 12:00 Uhr
+          </p>
+          <p>
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <strong>Ort:</strong> Kemptener Straße 10a, Lindau
+          </p>
+          <p>
+            <i class="fa fa-coffee" aria-hidden="true"></i> Gemütliche
+            Atmosphäre, Kaffee, Kakao, Punsch
+          </p>
+          <p>
+            <i class="fa fa-birthday-cake" aria-hidden="true"></i> Kuchen und
+            Plätzchen
+          </p>
+          <p>
+            <i class="fa fa-gift" aria-hidden="true"></i> Besuch des Nikolaus
+          </p>
+          <p>
+            <i class="fa fa-phone" aria-hidden="true"></i> Telefon:
+            0152/56965039
+          </p>
+          <p>
+            <i class="fa fa-envelope" aria-hidden="true"></i> E-Mail:
+            <a href="mailto:info@nachbarschaftshilfe-lindau.de"
+              >info@nachbarschaftshilfe-lindau.de</a
+            >
+          </p>
+        </div>
       </div>
     </div>
 
