--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link
+      href="assets/vendor/font-awesome/css/font-awesome.min.css"
       rel="stylesheet"
-      href="./assets/vendor/font-awesome/css/font-awesome.min.css"
     />
+
     <!-- Template Main CSS File -->
     <link href="./css/style.css" rel="stylesheet" />
 
@@ -177,12 +178,13 @@
             <h3 class="main_section_title">Informationen</h3>
             <p>
               <b>
-                In den Sommerferien ist der Laden geschlossen.<br />
                 Letzter Öffnungstag VOR den Ferien am Samstag, 29.07.2023
 
                 <br />
-                Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023</b
-              >
+                Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023
+                <br />Nikolausaktion der Nachbarschaftshilfe Lindau am 09.
+                Dezember 2023 <br />
+              </b>
             </p>
           </div>
           <div class="univrsal_container">
@@ -217,8 +219,8 @@
 
             <p>
               <a href="./was.html"
-                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                Stadtbus-Jahreskarten an sozial Berechtigte
+                >Nikolausaktion der Nachbarschaftshilfe Lindau am 09. Dezember
+                2023
               </a>
             </p>
           </div>
