--- a/laden.html
+++ b/laden.html
@@ -176,8 +176,8 @@
 
             <p>
               <a href="./was.html"
-                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                Stadtbus-Jahreskarten an sozial Berechtigte
+                >Nikolausaktion der Nachbarschaftshilfe Lindau am 09. Dezember
+                2023
               </a>
             </p>
           </div>
