--- a/spendenkonto.html
+++ b/spendenkonto.html
@@ -161,9 +161,8 @@
           </div>
           <div class="univrsal_container">
             <h1 class="main_section_title">spenden will – Spendenkonto</h1>
-
             <p>
-              <br>
+              <br />
               DE02 7315 0000 1002 6792 47 bei der Sparkasse Schwaben -Bodensee.
               <br />
               <br />
@@ -179,8 +178,8 @@
 
             <p>
               <a href="./was.html"
-                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                Stadtbus-Jahreskarten an sozial Berechtigte</a
+                >Nikolausaktion der Nachbarschaftshilfe Lindau am 09. Dezember
+                2023</a
               >
             </p>
           </div>
