--- a/was.html
+++ b/was.html
@@ -171,7 +171,9 @@
                 <span class="dot" onclick="currentSlide(8)"></span>
                 <span class="dot" onclick="currentSlide(9)"></span>
                 <span class="dot" onclick="currentSlide(10)"></span>
+                <span class="dot" onclick="currentSlide(11)"></span>
               </div>
+
               <div class="slide">
                 <div class="arow_container" style="width: 100%">
                   <a class="left" onclick="changeSlide(-1)">&#10094;</a>
@@ -799,6 +801,59 @@
                   >
                 </div>
               </div>
+              <div class="slide">
+                <div class="arow_container" style="width: 100%">
+                  <a class="left" onclick="changeSlide(-1)">&#10094;</a>
+                  <a class="right" onclick="changeSlide(1)">&#10095;</a>
+                </div>
+                <img
+                  src="./assets/img/portfolio/portfolio-10.jpg"
+                  alt="Image 0"
+                />
+                <div style="padding: 20px">
+                  <h4>
+                    Nikolausaktion der Nachbarschaftshilfe Lindau am 09.
+                    Dezember 2023
+                  </h4>
+                  <p>
+                    Am kommenden Samstag, den 09. Dezember 2023, lädt die
+                    Nachbarschaftshilfe Lindau herzlich zur traditionellen
+                    Nikolausaktion in ihre Räumlichkeiten in der Kemptener
+                    Straße 10a ein. Die Aktion geht von 09 Uhr bis 12 Uhr und
+                    verspricht eine gemütliche und kulinarische Atmosphäre für
+                    die ganze Familie. Die Nachbarschaftshilfe Lindau freut
+                    sich, Kunden, Anwohner und Besucher gleichermaßen willkommen
+                    zu heißen. Der Laden wird an diesem besonderen Tag zu einem
+                    Treffpunkt für gemeinsame Begegnungen und vorweihnachtliche
+                    Freude. Neben der Möglichkeit zum gemütlichen Austausch
+                    erwartet die Gäste ein vielfältiges Angebot kostenloser
+                    Leckereien. Vor dem Laden werden Kaffee, Kakao und Punsch
+                    frisch zubereitet, begleitet von einer Auswahl köstlicher
+                    Kuchen und Plätzchen. Das Team der Nachbarschaftshilfe lädt
+                    alle herzlich dazu ein, sich bei einer Tasse heißen Getränks
+                    und süßen Leckereien auf das bevorstehende Weihnachtsfest
+                    einzustimmen. Ein besonderes Highlight des Tages wird der
+                    Besuch des Nikolaus sein, der die Aktion mit seinem
+                    Erscheinen besonders die Kinder begeistern wird. Klein und
+                    Groß haben die Gelegenheit, dem Nikolaus persönlich zu
+                    begegnen, ihre Wünsche mitzuteilen und vielleicht auch die
+                    eine oder andere Überraschung zu erhalten. Die
+                    Nikolausaktion ist nicht nur eine Gelegenheit, sich auf das
+                    Fest einzustimmen, sondern auch eine Möglichkeit für die
+                    Gemeinschaft, sich zusammenzufinden und gemeinsam eine
+                    schöne Zeit zu verbringen. Die Aktion ist kostenfrei, und
+                    Spenden zur Unterstützung der Nachbarschaftshilfe sind
+                    natürlich herzlich willkommen. Die Nachbarschaftshilfe
+                    Lindau freut sich auf zahlreiche Besucher und darauf,
+                    gemeinsam mit den Besuchern eine adventliche Stimmung zu
+                    schaffen. <br />
+                    Für weitere Informationen erreichen Sie die
+                    Nachbarschaftshilfe Lindau unter der Telefonnummer
+                    „0152/56965039“ oder per E-Mail unter
+                    info@nachbarschaftshilfe-lindau.de erreichen.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <!-- END SLIDER -->
@@ -809,8 +864,8 @@
 
             <p>
               <a href="./was.html"
-                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                Stadtbus-Jahreskarten an sozial Berechtigte</a
+                >Nikolausaktion der Nachbarschaftshilfe Lindau am 09. Dezember
+                2023</a
               >
             </p>
           </div>
