--- a/wo.html
+++ b/wo.html
@@ -187,8 +187,8 @@
             <h2 class="main_section_title">News</h2>
             <p>
               <a href="./was.html"
-                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                Stadtbus-Jahreskarten an sozial Berechtigte</a
+                >Nikolausaktion der Nachbarschaftshilfe Lindau am 09. Dezember
+                2023</a
               >
             </p>
           </div>
