--- a/vorstand.html
+++ b/vorstand.html
@@ -177,8 +177,8 @@
 
             <p>
               <a href="./was.html"
-                >Klima-Aktion der Nachbarschaftshilfe Lindau 20
-                Stadtbus-Jahreskarten an sozial Berechtigte</a
+                >Nikolausaktion der Nachbarschaftshilfe Lindau am 09. Dezember
+                2023</a
               >
             </p>
           </div>
