--- a/index.html
+++ b/index.html
@@ -335,6 +335,18 @@
               >info@nachbarschaftshilfe-lindau.de</a
             >
           </p>
+          <p style="text-align: center; margin-top: 20px">
+            <a
+              style="
+                background-color: #3e8e41;
+                color: #fff;
+                padding: 15px;
+                border-radius: 10px;
+              "
+              href="/was.html"
+              >mehr Infos</a
+            >
+          </p>
         </div>
       </div>
     </div>
