--- a/index.html
+++ b/index.html
@@ -299,53 +299,19 @@
         <span class="close-button">&times;</span>
         <h3 class="main_section_title">Informationen</h3>
         <div>
-          <h2 style="color: #e74c3c">
-            Nikolausaktion der Nachbarschaftshilfe Lindau
-          </h2>
           <p>
-            <i class="fa fa-calendar" aria-hidden="true"></i>
-            <strong>Datum:</strong> Samstag, 09. Dezember 2023
+            Der Laden ist
+            <strong>2023 letztmalig am Samstag, 23.12.2023</strong> von
+            <strong>09 - 12 Uhr</strong> geöffnet. Danach geht es für das
+            Ladenteam in die wohlverdienten Weihnachtsferien.
           </p>
           <p>
-            <i class="fa fa-clock-o" aria-hidden="true"></i>
-            <strong>Zeit:</strong> 09:00 - 12:00 Uhr
-          </p>
-          <p>
-            <i class="fa fa-map-marker" aria-hidden="true"></i>
-            <strong>Ort:</strong> Kemptener Straße 10a, Lindau
-          </p>
-          <p>
-            <i class="fa fa-coffee" aria-hidden="true"></i> Gemütliche
-            Atmosphäre, Kaffee, Kakao, Punsch
-          </p>
-          <p>
-            <i class="fa fa-birthday-cake" aria-hidden="true"></i> Kuchen und
-            Plätzchen
-          </p>
-          <p>
-            <i class="fa fa-gift" aria-hidden="true"></i> Besuch des Nikolaus
-          </p>
-          <p>
-            <i class="fa fa-phone" aria-hidden="true"></i> Telefon:
-            0152/56965039
-          </p>
-          <p>
-            <i class="fa fa-envelope" aria-hidden="true"></i> E-Mail:
-            <a href="mailto:info@nachbarschaftshilfe-lindau.de"
-              >info@nachbarschaftshilfe-lindau.de</a
-            >
-          </p>
-          <p style="text-align: center; margin-top: 20px">
-            <a
-              style="
-                background-color: #3e8e41;
-                color: #fff;
-                padding: 15px;
-                border-radius: 10px;
-              "
-              href="/was.html"
-              >mehr Infos</a
-            >
+            <strong>2024</strong> sind wir erstmalig wieder am
+            <strong>Dienstag, 09.01.2024</strong> in der Zeit von
+            <strong>09 - 14 Uhr</strong> für Sie da. Das Team der
+            Nachbarschaftshilfe Lindau (B) e.V. wünscht Ihnen ein
+            <strong>FROHES WEIHNACHTSFEST</strong> und einen guten Rutsch in das
+            neue Jahr.
           </p>
         </div>
       </div>
