--- a/contact.html
+++ b/contact.html
@@ -169,6 +169,17 @@
                   alt="SW Lindau Dachmarke Claim RGB"
               /></a>
             </p>
+            <p>
+              <a
+                href="https://www.bodenseeklinik.de/"
+                target="_blank"
+                title="BODENSEEKLINIK"
+                ><img
+                  src="assets/img/Bodenseeklinik.svg"
+                  alt="Prof. Mang's Bodenseeklinik"
+width="100%"   
+              /></a>
+        </p>
           </div>
 
           <div class="univrsal_container">
