--- a/index.html
+++ b/index.html
@@ -174,19 +174,25 @@
           </div>
 
           <!-- content -->
-          <div class="univrsal_container">
+<!--          <div class="univrsal_container">
             <h3 class="main_section_title">Informationen</h3>
             <p>
-              <b>
-                Letzter Öffnungstag VOR den Ferien am Samstag, 29.07.2023
 
-                <br />
-                Erster Öffnungstag NACH den Ferien am Dienstasg, 12.09.2023
-                <br />Nikolausaktion der Nachbarschaftshilfe Lindau am 09.
-                Dezember 2023 <br />
-              </b>
-            </p>
-          </div>
+            Der Laden ist
+            <strong>2023 letztmalig am Samstag, 23.12.2023</strong> von
+            <strong>09 - 12 Uhr</strong> geöffnet. Danach geht es für das
+            Ladenteam in die wohlverdienten Weihnachtsferien.
+          </p>
+          <p>
+            <strong>2024</strong> sind wir erstmalig wieder am
+            <strong>Dienstag, 09.01.2024</strong> in der Zeit von
+            <strong>09 - 14 Uhr</strong> für Sie da. Das Team der
+            Nachbarschaftshilfe Lindau (B) e.V. wünscht Ihnen ein
+            <strong>FROHES WEIHNACHTSFEST</strong> und einen guten Rutsch in das
+            neue Jahr.
+          </p>
+
+          </div>-->
           <div class="univrsal_container">
             <h1 class="main_section_title">WER</h1>
             <p>
@@ -206,7 +212,7 @@
               <br />
 
               Seit der Gründung im Jahr 1965 wurden mehr als 175.000
-              Einsatzstunden geleistet und 30.000 Menschen in Not geholfen. Die
+              Einsatzstunden geleistet und 30.000 Menschen in Not geholfen.s Die
               Kleidung, die dabei zum Einsatz kam, hat ein Gewicht von über
               70.000 Tonnen. <br />
 
@@ -214,7 +220,7 @@
             </p>
           </div>
           <!-- News -->
-          <div class="univrsal_container">
+         <div class="univrsal_container">
             <h1 class="main_section_title">News</h1>
 
             <p>
@@ -269,11 +275,23 @@
                 <h3 class="">Sponsoren</h3>
                 <p>
                   <a
-                    href="http://www.sw-lindau.de/"
+                    href="https://www.sw-lindau.de/"
                     target="_blank"
                     title="Stadtwerke Lindau"
                     ><img
                       src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
+                      alt="SW Lindau Dachmarke Claim RGB"
+                      width="300"
+                      height="120"
+                  /></a>
+                </p>
+                                <p>
+                  <a
+                    href="https://www.bodenseeklinik.de/"
+                    target="_blank"
+                    title="BODENSEEKLINIK"
+                    ><img
+                      src="assets/img/Bodenseeklinik.svg"
                       alt="SW Lindau Dachmarke Claim RGB"
                       width="300"
                       height="120"
