--- a/satzung.html
+++ b/satzung.html
@@ -1752,6 +1752,17 @@
                       width="300"
                       height="120"
                   /></a>
+                </p><p>
+                  <a
+                    href="https://www.bodenseeklinik.de/"
+                    target="_blank"
+                    title="BODENSEEKLINIK"
+                    ><img
+                      src="assets/img/Bodenseeklinik.svg"
+                      alt="SW Lindau Dachmarke Claim RGB"
+                      width="300"
+                      height="120"
+                  /></a>
                 </p>
               </div>
             </div>
