--- a/unterst.html
+++ b/unterst.html
@@ -178,6 +178,23 @@
                   width="100%"
               /></a>
             </p>
+                        <p>
+              <b
+                >Wir bedanken uns für die Unterstützung
+                durch die Prof. Mang's Bodenseeklinik
+              </b>
+            </p>
+            <p>
+                  <a
+                    href="https://www.bodenseeklinik.de/"
+                    target="_blank"
+                    title="BODENSEEKLINIK"
+                    ><img
+                      src="assets/img/Bodenseeklinik.svg"
+                      alt="Prof. Mang's Bodenseeklinik"
+    width="100%"   
+                  /></a>
+            </p>
           </div>
           <div class="univrsal_container">
             <h1 class="main_section_title">News</h1>
@@ -238,6 +255,17 @@
                     title="Stadtwerke Lindau"
                     ><img
                       src="assets/img/SW_Lindau_Dachmarke_Claim_RGB.png"
+                      alt="SW Lindau Dachmarke Claim RGB"
+                      width="300"
+                      height="120"
+                  /></a>
+                </p><p>
+                  <a
+                    href="https://www.bodenseeklinik.de/"
+                    target="_blank"
+                    title="BODENSEEKLINIK"
+                    ><img
+                      src="assets/img/Bodenseeklinik.svg"
                       alt="SW Lindau Dachmarke Claim RGB"
                       width="300"
                       height="120"
