--- a/index.html
+++ b/index.html
@@ -318,18 +318,14 @@
         <h3 class="main_section_title">Informationen</h3>
         <div>
           <p>
-            Der Laden ist
-            <strong>2023 letztmalig am Samstag, 23.12.2023</strong> von
-            <strong>09 - 12 Uhr</strong> geöffnet. Danach geht es für das
-            Ladenteam in die wohlverdienten Weihnachtsferien.
+            Der Laden ist von
+            <strong>Mittwoch 27.03.2024</strong> bis
+            <strong>Montag 08.04.2024</strong> geschlossen.
           </p>
           <p>
-            <strong>2024</strong> sind wir erstmalig wieder am
-            <strong>Dienstag, 09.01.2024</strong> in der Zeit von
-            <strong>09 - 14 Uhr</strong> für Sie da. Das Team der
-            Nachbarschaftshilfe Lindau (B) e.V. wünscht Ihnen ein
-            <strong>FROHES WEIHNACHTSFEST</strong> und einen guten Rutsch in das
-            neue Jahr.
+            <strong>Erster Öffnungstag</strong> nach den Osterferien ist
+            <strong>Dienstag 09.04.2024</strong> Das Team der
+            Nachbarschaftshilfe Lindau wünsche „Frohe Ostern“
           </p>
         </div>
       </div>
