--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
     <!-- End btn_up -->
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-    <!-- <script src="./js/modalWindow.js"></script> -->
+    <script src="./js/modalWindow.js"></script>
     <!-- <script src="./js/modalTime.js"></script> -->
   </body>
 </html>
