--- a/index.html
+++ b/index.html
@@ -318,14 +318,9 @@
         <h3 class="main_section_title">Informationen</h3>
         <div>
           <p>
-            Der Laden ist von
-            <strong>Mittwoch 27.03.2024</strong> bis
-            <strong>Montag 08.04.2024</strong> geschlossen.
-          </p>
-          <p>
-            <strong>Erster Öffnungstag</strong> nach den Osterferien ist
-            <strong>Dienstag 09.04.2024</strong> Das Team der
-            Nachbarschaftshilfe Lindau wünsche „Frohe Ostern“
+            In den Pfingstferien ist der Laden geschlossen. Ab Dienstag, 04.
+            Juni 2024 sind wir wieder für Sie da. Bitte keine Waren vor dem
+            Laden abstellen.
           </p>
         </div>
       </div>
@@ -334,7 +329,7 @@
     <!-- End btn_up -->
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-    <!-- <script src="./js/modalWindow.js"></script> -->
+    <script src="./js/modalWindow.js"></script>
     <!-- <script src="./js/modalTime.js"></script> -->
   </body>
 </html>
