--- a/index.html
+++ b/index.html
@@ -318,9 +318,48 @@
         <h3 class="main_section_title">Informationen</h3>
         <div>
           <p>
-            In den Pfingstferien ist der Laden geschlossen. Ab Dienstag, 04.
-            Juni 2024 sind wir wieder für Sie da. Bitte keine Waren vor dem
-            Laden abstellen.
+            Nachbarschaftshilfe Lindau hilft Hochwasser-Geschädigten Das
+            Hochwasser hat auch die Bodenseeregion und Lindau getroffen und
+            teilweise zu erheblichen Schäden geführt. Gott sei Dank sind es bei
+            uns nur materielle Schäden, die aber Familien in ihrer
+            wirtschaftlichen Existenz empfindlich treffen. Die
+            Nachbarschaftshilfe Lindau hilft hier unbürokratisch und direkt.
+          </p>
+          <p>
+            Sofortige Unterstützung Vordergründig steht die schnelle und
+            kurzfristige Unterstützung durch Gegenstände und Dinge des täglichen
+            Lebens. Dazu gehören: Kleidung inklusive Schuhe für Groß und Klein
+            und für alle Jahreszeiten Haushaltsartikel jeglicher Art (Geschirr,
+            Besteck, Töpfe etc.) Handtücher, Badetücher, Geschirrtücher und
+            Bettwäsche Spielzeug inklusive Kuscheltiere Elektroartikel für den
+            Haushalt sowie Unterhaltungselektronik inklusive CDs, DVDs, BluRays
+            Konkrete Hilfe Aktuell wurde eine Familie in Lindau-Zech mit 500 €
+            unterstützt, die nachweislich fast die komplette Einrichtung in der
+            Erdgeschosswohnung durch die starken Regenfälle und das Hochwasser
+            verloren hat. Gemeinsam mit Stefan Fürhaupter von der
+            Jugendsozialarbeit an der Grundschule Lindau-Reutin konnte so ein
+            finanzieller Beitrag zur spontanen Unterstützung der betroffenen
+            Familie geleistet werden. Stefan Fürhaupter hatte von diesem Fall
+            erfahren und durch sein großes Netzwerk, auch unter der
+            Elternschaft, dann gemeinsam mit der Nachbarschaftshilfe Lindau die
+            Hilfe organisiert. Sybille Mang, Vorsitzende der Nachbarschaftshilfe
+            Lindau (B) e.V., bewilligte gemeinsam mit dem Vorstand die
+            finanzielle Unterstützung. Die Ehefrau von Prof. Dr. Dr. Werner Mang
+            erinnerte daran, dass die Nachbarschaftshilfe Lindau für solche
+            Fälle ein wichtiger Ansprechpartner sei und gerade hier die sozial
+            unterstützende Stärke zeige.
+          </p>
+          <p>
+            Kontaktmöglichkeiten Betroffene können sich direkt zu den
+            Öffnungszeiten im Laden der Nachbarschaftshilfe Lindau melden:
+            Dienstag: 09:00 – 14:00 Uhr Samstag: 09:00 – 12:00 Uhr Dort stehen
+            Beate Schwammel und Jeanette Huckle für Hilfe und Unterstützung
+            gerne zur Verfügung. Ansonsten ist die Nachbarschaftshilfe Lindau zu
+            den Öffnungszeiten auch telefonisch erreichbar:
+          </p>
+          <p>
+            Mobil: +49 1525 6965039 Per E-Mail besteht die Möglichkeit, sich
+            über info@nachbarschaftshilfe-lindau.de zu melden.
           </p>
         </div>
       </div>
